--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,7 +1,17 @@
 .AppHeader {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   background-color: aquamarine;
+
+  text-align: center;
+  font-size: 0.5em;
 }
+
+@media screen and (min-width: 768px) {
+  .AppHeader {
+    justify-content: left;
+  }
+}
+
